Fixes for mobile and the footer no longer overflows

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body {
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
-
 }
 
 body {
@@ -204,7 +203,7 @@ navMenu a:hover {
     width: 85%;
     color: white;
     font-size: 7vh;
-    text-shadow: 4px 4px 5px black;
+    text-shadow: 0.4vh 0.4vh 0.4vh black;
     animation: slideFromLeft 1s ease;
 }
 
@@ -345,19 +344,22 @@ input[type=submit]:active,
 }
 
 footer {
-    width: 100%;
     background-color: rgb(40, 40, 40);
+}
+
+.footerContainer {
+    width: fit-content;
     color: white;
     height: fit-content;
     text-align: center;
     padding: 4vh;
     overflow: hidden;
+    margin: auto;
 }
 
-footer p {
+.footerContainer p {
     color: white;
     font-size: 1.75vh;
-    margin: 0;
 }
 
 a {
